--- a/relazione/sezioni/conclusioni.tex
+++ b/relazione/sezioni/conclusioni.tex
@@ -1,3 +1,2 @@
-\chapter{Todo\label{sec:todo}}
+\chapter{Conclusioni\label{sec:conclusioni}}
 \lettrine[findent=1.5em]{T}odo.
-%Riassumere quanto sono utili le tecnologie usate eccetera
