--- a/relazione/sezioni/gamification.tex
+++ b/relazione/sezioni/gamification.tex
@@ -1,8 +1,4 @@
 \chapter{Gamification\label{sec:gamification}}
-%TODO prendere dalla tesi Segato e da quanto abbiamo sviluppato
-%Punti
-%Livelli
-%Vedere bene i capitoli della tesi e cosa riportare qui
 
 \section{Tecnologie persuasive\label{sec:tecnologie-persuasive}}
 
@@ -10,6 +6,13 @@ Una definizione di tecnologie persuasive è la seguente:
 \begin{quoting}
     \omissis tecnologie interattive che mirano a cambiare il comportamento degli utenti attraverso la persuasione e l'influenza sociale senza usare inganni o forzature. \omissis
 \end{quoting}
+
+\begin{figure}[htp]
+    \centering
+    \includegraphics[width=0.5\textwidth]{immagini/Fogg_behavior_model.png}
+    \caption{Fogg Behavior Model}
+    \label{fig:fogg-behavior-model}
+\end{figure}
 
 B.J. Fogg ha ideato un modello per studiare il comportamento umano e come esso muta, prendendo in analisi le seguenti caratteristiche:
 \begin{itemize}
@@ -22,7 +25,7 @@ Oinas-Kukkonen e Harjumaa hanno invece creato il Persuasive Systems Design (PSD)
 In particolare PSD mette in evidenza:
 \begin{itemize}
     \item Information Technology (IT) non è mai neutrale rispetto ai comportamenti delle persone;
-    \item se il sistema supporta l'assunzione di impegni, gli utenti probabilmente saranno più persuasi.
+    \item se il sistema supporta l'assunzione di impegni, gli utenti probabilmente saranno più persuasi;
     \item un individuo che valuta attentamente il contenuto del messaggio persuasivo può essere approcciato con un percorso diretto, mentre un individuo meno riflessivo e che usa semplici indizi o stereotipi può essere persuaso attraverso un percorso indiretto;
     \item la persuasione è spesso incrementale: risulta più semplice iniziare le persone a fare una serie di azioni attraverso suggerimenti incrementali, piuttosto che con un unico suggerimento fornito una tantum;
     \item contenuti basati su informazioni non fidate o false impediscono l'obiettivo finale di cambiare le attitudini o i comportamenti;
@@ -42,7 +45,7 @@ Il contesto della persuasione è formato da:
     \begin{itemize}
         \item contesto d'uso;
         \item contesto dell'utente;
-        \item contesto tecnologico
+        \item contesto tecnologico.
     \end{itemize}
     \item[strategia]:
     \begin{itemize}
@@ -154,7 +157,7 @@ Zichermann descrive le principali game mechanics e descrive alcune delle più im
 \begin{description}
     \item[punti ricompensa]:
     \begin{itemize}
-        \item punti esperienza (XP): guidano il giocatore e gli permettono di orientarsi nell'esperienza di gioco, di capire quali sono le attività più importanti. Non si perdono mai;
+        \item punti esperienza: guidano il giocatore e gli permettono di orientarsi nell'esperienza di gioco, di capire quali sono le attività più importanti. Non si perdono mai;
         \item punti vendibili: questi punti sono guadagnati e spesi dal giocatore per ricompense esterne (regali, monete, status) o interne al sistema e sono la base per la formazione di una economia virtuale;
         \item punti abilità: sono i punti che permettono al giocatore di guadagnare ricompense per le attività svolte e sono guadagnati portando a termine azioni specifiche;
         \item punti karma: questi punti portano un guadagno al giocatore solo se condivisi;
@@ -162,7 +165,7 @@ Zichermann descrive le principali game mechanics e descrive alcune delle più im
     \end{itemize} 
     \item[livelli]: fungono da marcatori per i giocatori per conoscere la loro posizione nell'esperienza e nel percorso di gioco. La loro difficoltà non è solitamente lineare: si tende ad iniziare con livelli più semplici e progressivamente si va verso quelli più complessi. Solitamente un gioco viene strutturato così che il passaggio di livello avvenga dopo aver accumulato un determinato quantitativo di punti e che dia accesso a nuovi contenuti.
     \item[badge]: i badge marcano il completamento di obiettivi e il progresso nel gioco. In alcuni giochi possono anche rimpiazzare i livelli come marker del progresso. A livello di dinamiche, oltre che per mostrare uno status, le persone li desiderano per poterli collezionare, per ragioni estetiche o anche provare la piacevole e improvvisa sorpresa di averne guadagnato uno nuovo.
-    \item[classifiche]: le classifiche permettono di ordinare le performance degli utenti e di fare paragoni. Ne esistono di due tipi: le "infinite leaderboards", che comprendono tutti gli utenti del gioco, e le "no-discentive leaderboards", dove il giocatore viene posto al centro, senza badare alla sua posizione nel ranking, così che possa vedere solamente il giocatore prima e dopo di lui. La competizione risulta correlata all'aspirazione di diventare il migliore all'interno del proprio gruppo di amici.
+    \item[classifiche]: le classifiche permettono di ordinare le performance degli utenti e di fare paragoni. Ne esistono di due tipi: le "infinite leader boards", che comprendono tutti gli utenti del gioco, e le "no discentive leader boards", dove il giocatore viene posto al centro, senza badare alla sua posizione nel ranking, così che possa vedere solamente il giocatore prima e dopo di lui. La competizione risulta correlata all'aspirazione di diventare il migliore all'interno del proprio gruppo di amici.
     \item[economia di gioco]: l'adozione di determinati tipi di punti permette la costruzione di vere e proprie economie all'interno del gioco, dove l'utente non può vincere a lungo senza comprare, guadagnare e consumare determinati beni virtuali.
     \item[sfide]: le sfide corrispondono alle "missioni" che gli utenti devono compiere all'interno del gioco; danno un motivo al giocatore per continuare a partecipare al gioco, motivandoli a raggiungere risultati attraverso ricompense come trofei, badge da sbloccare. Inoltre, gli obiettivi generano confronto e competizione quando mostrati agli altri giocatori. È importante ricordare che a un giocatore novizio o ai primi livelli non vanno date sfide da livello master: è meglio dare sfide diverse per livelli diversi. Un particolare tipo di sfide sono quelle collaborative. Possono essere inserite nel gioco per creare esperienze di gruppo, dove i giocatori agiscono da soli ma i risultati vengono sommati insieme.
     \item[onboarding]: con onborading si intende l'atto di introdurre un nuovo utente nel gioco. I primi minuti in cui un utente s'impegna in un gioco sono i più importanti, perché è in questo breve lasso di tempo che prende le sue decisioni. In questi piccoli istanti non bisogna dare spiegazioni o far leggere lunghi testi con regole o istruzioni, ma bisogna fargli provare l'applicazione. Inoltre in questa fase non bisogna chiedere all'utente di registrarsi: non c'è nulla allo stato attuale che lo obblighi a fornire dati personali ad un servizio che ancora non conosce. Il processo di onborading rivela la complessità del gioco lentamente e non può fallire. Nel livello 0 (il tutorial) non ci devono essere scelte. Al giocatore vanno offerte azioni senza rischi, che non possono portare al fallimento, poi va ricompensato per aver completato l'azione con successo.
@@ -173,11 +176,11 @@ La personalizzazione può apparire in diverse forme, ad esempio, lasciando decid
 I feedback sono le informazioni che indicano al giocatore dove si trova nell'esperienza di gioco e si vedono frequentemente nelle interazioni tra punteggi e livelli.
 
 L'utilizzo di queste meccaniche risulta essere basilare per innescare gli activity loops, che caratterizzano i processi di gamification.
-Lo scopo di questi loop è quello di nutrire l'entusiasmo degli utenti al fine di convincerli a tornare ad utilizzare il sistema. Ne esistono due tipi: l'engagement loop e il progression loop.
+Lo scopo di questi loop è quello di nutrire l'entusiasmo degli utenti al fine di convincerli a tornare ad utilizzare il sistema. Ne esistono due tipi: engagement loop e progression loop.
 
-L'engagement loop opera a livello di azioni individuali dell'utente: quando nell'utente la motivazione è sufficientemente forte, questa porterà l'utente stesso all'azione e quindi ad utilizzare il sistema. L'azione produrrà un feedback, il quale si tradurrà in una forma di motivazione per l'utente. Così il ciclo si ripeterà.
+Engagement loop opera a livello di azioni individuali dell'utente: quando nell'utente la motivazione è sufficientemente forte, questa porterà l'utente stesso all'azione e quindi ad utilizzare il sistema. L'azione produrrà un feedback, il quale si tradurrà in una forma di motivazione per l'utente. Così il ciclo si ripeterà.
 
-Il progression loop considera cosa accade all'utente durante l'utilizzo del sistema nel suo insieme. Questo loop dimostra la necessità di creare degli step intermedi bilanciati così da comunicare all'utente la facilità nel raggiungerli uno dopo l'altro. All'interno del gioco, solitamente questo si traduce nell'evoluzione del giocatore (newbie - expert - master). Il primo passo consiste nell'onboarding, ovvero il processo di inserimento dell'utente nel gioco nel modo più veloce ed efficace possibile. Non appena l'utente ha imparato le regole ed inizia a raggiungere i livelli più alti, sono alternati momenti di riposo, con difficoltà minore, a momenti dove la difficoltà di gioco è più alta. Mantenere sempre la difficoltà alta renderebbe il gioco troppo difficile agli occhi dell'utente, stancandolo.
+Il progression loop considera cosa accade all'utente durante l'utilizzo del sistema nel suo insieme. Questo loop dimostra la necessità di creare degli step intermedi bilanciati così da comunicare all'utente la facilità nel raggiungerli uno dopo l'altro. All'interno del gioco, solitamente questo si traduce nell'evoluzione del giocatore (newbie - expert - master). Il primo passo consiste in on-boarding, ovvero il processo di inserimento dell'utente nel gioco nel modo più veloce ed efficace possibile. Non appena l'utente ha imparato le regole ed inizia a raggiungere i livelli più alti, sono alternati momenti di riposo, con difficoltà minore, a momenti dove la difficoltà di gioco è più alta. Mantenere sempre la difficoltà alta renderebbe il gioco troppo difficile agli occhi dell'utente, stancandolo.
 
 Le game mechanics sono quindi essenziali per innescare questi loop. Ci sono meccaniche di gioco che funzionano bene per una determinata tipologia di giocatori e meno bene per altre. Per questo motivo è importante considerare anche le dinamiche di gioco che sono l'evoluzione temporale e i pattern sia del gioco che dei giocatori che rendono il gioco più divertente. Buone dinamiche portano il giocatore nelle fasi successive al momento giusto, così che il giocatore si senta abile ed esperto. Se non ben progettate, portano a perdere giocatori nel tempo o per noia o per il dover affrontare sfide troppo complesse, che rendono il gioco meno divertente.
 
@@ -187,7 +190,7 @@ Per quanto riguarda la nostra app, abbiamo deciso di applicare le seguenti mecca
     \item punti esperienza e punti abilità, che permettono al giocatore di salire di livello, in modo più facile all'inizio e più difficile man mano che il gioco prosegue, ma cercando di non fornire obiettivi impossibili;
     \item badge guadagnati in base a un numero di azioni specifiche svolte;
     \item classifiche per esperienza e abilità diverse;
-    \item onbording con tutorial: l'utente viene introdotto al gioco senza troppe spiegazioni, e in modo che riceva immediatamente una gratificazione dopo aver votato un treno. Le istruzioni vengono visualizzate per i primi tre accessi, dopodiché scompaiono e diventano raggiungibili dal menù laterale.
+    \item on-boarding con tutorial: l'utente viene introdotto al gioco senza troppe spiegazioni, e in modo che riceva immediatamente una gratificazione dopo aver votato un treno. Le istruzioni vengono visualizzate per i primi tre accessi, dopodiché scompaiono e diventano raggiungibili dal menù laterale.
 \end{itemize}
 
 \section{Dinamiche di gioco e FBM\label{sec:dinamiche-fbm}}
