--- a/relazione/sezioni/conclusioni.tex
+++ b/relazione/sezioni/conclusioni.tex
@@ -1,2 +1,15 @@
 \chapter{Conclusioni\label{sec:conclusioni}}
-\lettrine[findent=1.5em]{T}odo.
+
+\section{Valutazione di Flutter\label{sec:valutazione-flutter}}
+Nel complesso valutiamo positivamente l'esperienza avuta con il framework Flutter.
+Permette di sviluppare app mobile anche abbastanza complesse in poco tempo, grazie alla documentazione fornita sul sito ufficiale, ai molti tutorial che si trovano in giro e ai diversi plugin che vengono sviluppati per gestire le diverse funzionalità messe a disposizione dai dispositivi mobile.
+
+Alcuni punti sfavorevoli sono la difficoltà nell'implementare animazioni e le eccessive semplificazioni apportate nei tutorial, che potrebbero portare a fare errori che potrebbero compromettere le performance della app.
+
+Probabilmente sarà possibile risolvere il primo problema man mano che nuovi plugin vengono rilasciati e che lo sviluppo del framework prosegue.
+
+\section{Persuasione e gamification\label{sec:persuasione-gamification}}
+Per quanto riguarda lo studio delle tecniche di gamification, possiamo dire si tratti di un campo di ricerca interessante e utile nella persuasione degli utenti.
+Non abbiamo avuto modo di sperimentare tutte le tecniche illustrate, in primo luogo perché non tutte erano adatte al tipo di applicazione sviluppata (in particolare non trattandosi di un gioco immersive non sono stati presi in considerazione i giocatori survivors, daredevils e conquerors), in secondo luogo per il tempo destinato a conoscere meglio Flutter.
+
+Sarebbe utile implementare le tecniche di gamification più orientate agli utenti che prediligono gli aspetti sociali, in particolare cooperazione, competizione e riconoscimento, ad esempio attraverso l'uso di Facebook per la gestione di una o più classifiche in base ai punti guadagnati dagli utenti.
