--- a/relazione/sezioni/design.tex
+++ b/relazione/sezioni/design.tex
@@ -18,3 +18,9 @@ Avendo a disposizione solamente quattro scelte diventa inoltre più difficile ch
 Viene fornito un tutorial JIT per fornire poche semplici istruzioni su come votare il treno su cui si è saliti.
 Questo tutorial viene mostrato per i primi tre voti espressi dall'utente.
 Dopo i tre voti il tutorial sparisce, pur restando raggiungibile dal menù laterale.
+
+\section{Profilo\label{sec:profilo}}
+Nel capitolo seguente abbiamo riassunto i punti significativi che ci sono tornati utili di una tesi fornita per lo studio delle tecniche di Gamification e fornito alcuni dettagli relativi alla nostra app.
+In base a quanto appreso, abbiamo deciso di fornire un profilo con alcune personalizzazioni, ma non troppe, in modo da non disorientare l'utente durante l'uso dell'app.
+È possibile infatti solamente personalizzare l'immagine del profilo e il proprio nickname.
+Inoltre si vedono i punti esperienza guadagnati per le valutazioni fornite, e i punti abilità guadagnati in base all'orario di valutazione e alla località di destinazione del treno, oltre al livello raggiunto dall'utente.
