--- a/relazione/sezioni/introduzione.tex
+++ b/relazione/sezioni/introduzione.tex
@@ -16,4 +16,4 @@ Un altro obiettivo importante è quello di aiutare l'utente a capire se ci sono 
 
 \section{Utenti target}
 Il pubblico di utenti che abbiamo considerato è generico e vario, perché chiunque può prendere un treno.
-L'applicazione vuole fornire un servizio ai viaggiatori che abitualmente prendono già il treno e coinvolgere e invogliare gli utenti meno abituali ad usare un mezzo più ecosostenibile rispetto ad altri.
+L'applicazione vuole fornire un servizio ai viaggiatori che abitualmente prendono già il treno e coinvolgere e invogliare gli utenti meno abituali ad usare un mezzo più eco-sostenibile rispetto ad altri.
