aggiunta sezione schermate, modifiche a interfaccia e gesture

--- a/relazione/sezioni/implementazione.tex
+++ b/relazione/sezioni/implementazione.tex
@@ -7,9 +7,11 @@ Per lo sviluppo dell'applicazione è stato utilizzato il sistema di controllo di
 	\item IDE: Microsoft Visual Studio Code, Android Studio, XCode
 \end{itemize}
 
-I dispositivi usati per sviluppo e test sono i seguenti:
+I dispositivi mobile utilizzati per sviluppo e il test dell'applicazione sono i seguenti:
 \begin{itemize}
     \item Acer T04 con Android 6.0 Marshmallow
+    \item Xiaomi Mi 9T con Android 9.1 Pie
+    \item iPhone XR con iOS (fornito dal dipartimento)
 \end{itemize}
 
 \section{Tecnologie usate\label{sec:tecnologie}}
