--- a/relazione/sezioni/implementazione.tex
+++ b/relazione/sezioni/implementazione.tex
@@ -66,7 +66,7 @@ In questo caso però l'utente era costretto a eseguire il login con il proprio a
 La soluzione in questo caso è stata quella di implementare un database con una struttura che rispecchia quella del documento con i dati relativi al singolo utente in una struttura relazionale, memorizzata in locale attraverso l'uso di sqlite.
 
 \subsection{Comparazione con altri framework\label{sec:flutter-comparazione}}
-\lettrine[findent=1.5em]{T}odo.
+Todo.
 
 \section{Strumenti di test usati}
 %TODO parlare degli fantastici strumenti di Flutter se riusciremo a usarli
