--- a/relazione/sezioni/introduzione.tex
+++ b/relazione/sezioni/introduzione.tex
@@ -1,5 +1,5 @@
 \chapter{Introduzione\label{sec:introduzione}}
-\lettrine[findent=1.5em]{L}a relazione descrive il progetto di Mobile Programming svolto da Matteo Marchiori e Giovanni Peron e consiste in un'applicazione mobile con elementi di gamification.
+\noindent La relazione descrive il progetto di Mobile Programming svolto da Matteo Marchiori e Giovanni Peron, il quale consiste in un'applicazione mobile con elementi di gamification.
 
 \section{Obiettivi del progetto\label{sec:obiettivi}}
 Gli obiettivi del progetto sono:
