--- a/relazione/template.tex
+++ b/relazione/template.tex
@@ -1,11 +1,6 @@
 % Template per relazioni
 
-\documentclass[10pt,                   
-               a4paper,
-               twoside,
-               openright                           
-               italian,
-               english]{scrbook}
+\documentclass[10pt, a4paper, twoside, openright italian, english]{scrbook}
 \usepackage{type1ec}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
@@ -18,7 +13,8 @@
 \usepackage[backref,hyperref,square,style=philosophy-modern,autolang=hyphen,backend=biber]{biblatex}
 \usepackage[eulerchapternumbers,beramono,pdfspacing]{classicthesis}
 \usepackage{arsclassica}
-\usepackage[top=60pt,bottom=75pt]{geometry}
+\usepackage[nomarginpar,left=80pt,right=80pt top=60pt,bottom=75pt]{geometry}
+%\usepackage[nomarginpar, margin=.5in]{geometry}
 \usepackage[noadvisor]{frontespizio}
 \usepackage{float}
 \usepackage{tabularx}
@@ -44,8 +40,10 @@
 \renewcommand{\tablename}{}
 \usepackage[hyphenbreaks]{breakurl}
 \usepackage{verbatim}
-
-
 %\renewcommand{\thefootnote}{\fnsymbol{footnote}}
 %
 %\raggedbottom
+\usepackage{enumitem}
+
+\usepackage[parfill]{parskip}
+\setlength{\parskip}{1ex}
