--- a/relazione/relazione.tex
+++ b/relazione/relazione.tex
@@ -3,10 +3,10 @@
 \begin{document}
     \frontmatter
     \input{sezioni/frontespizio}
-    \input{sezioni/colophon}
+    %\input{sezioni/colophon}
     \afterpage{\null\thispagestyle{empty}\clearpage}
-    \input{sezioni/ringraziamenti}
-    \afterpage{\null\thispagestyle{empty}\clearpage}
+    %\input{sezioni/ringraziamenti}
+    %\afterpage{\null\thispagestyle{empty}\clearpage}
     \input{sezioni/indici}
     \afterpage{\null\thispagestyle{empty}\clearpage}
     \mainmatter
