fix template e picoole modifiche

--- a/relazione/sezioni/design.tex
+++ b/relazione/sezioni/design.tex
@@ -13,7 +13,7 @@ L'interfaccia dell'applicazione è stata implementata, tenendo in considerazione
 \item l'utilizzo del progressive disclosure evitando il sovraffollamento dell'interfaccia;
 \item la scelta dei colori e delle dimensioni del testo corrette per garantire un buon livello di accessibilità.
 \end{itemize}
-%TODOspiegare evitati i tablet causa tempo
+%TODO spiegare evitati i tablet causa tempo
 \section{Schermate dell'applicazione\label{sec:schermate}}
 \subsection{Home}
 \vspace{-\parskip}
@@ -35,7 +35,7 @@ L'interfaccia dell'applicazione è stata implementata, tenendo in considerazione
 \vspace{1cm}
 \\Dalla schermata iniziale è possibile vedere la stazione ferroviaria più vicina, localizzata attraverso il GPS.
 Viene presentata una lista delle destinazioni raggiungibili tramite i treni in partenza dalla stazione più vicina identificata. Da questa lista di treni è possibile accedere ad una pagina con più dettagli relativi al singolo treno.
-Ciò è un esempio di interfaccia just-in-time che applica il progressive disclosure, perchè vengono fornite le informazioni principali relative ai treni in partenza, mentre i dettagli per ognuno di essi possono essere visualizzati attraverso un'ulteriore interazione.\\
+Ciò è un esempio di interfaccia just-in-time che applica il progressive disclosure, perché vengono fornite le informazioni principali relative ai treni in partenza, mentre i dettagli per ognuno di essi possono essere visualizzati attraverso un'ulteriore interazione.\\
 %TODO controllare che sia stata implementata gesture menù laterale e opzione vedi classifica in tale menù
 In questa schermata è possibile visualizzare un menù laterale, tramite una gesture di swipe a destra, la quale viene illustrata al capitolo \ref{sec:gesture}. Grazie a questo menù l'utente può raggiungere la pagina relativa al suo profilo, la classifica generale degli utenti, una pagina per rivedere il tutorial per la valutazione di un treno.
 \subsection{Stato del treno}
