--- a/relazione/template.tex
+++ b/relazione/template.tex
@@ -1,6 +1,10 @@
 % Template per relazioni
 
-\documentclass[10pt, a4paper, twoside, openright italian, english]{scrbook}
+\documentclass[10pt,                   
+               a4paper,
+               twoside,
+               italian,
+               english]{scrbook}
 \usepackage{type1ec}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
@@ -13,8 +17,7 @@
 \usepackage[backref,hyperref,square,style=philosophy-modern,autolang=hyphen,backend=biber]{biblatex}
 \usepackage[eulerchapternumbers,beramono,pdfspacing]{classicthesis}
 \usepackage{arsclassica}
-\usepackage[nomarginpar,left=80pt,right=80pt top=60pt,bottom=75pt]{geometry}
-%\usepackage[nomarginpar, margin=.5in]{geometry}
+\usepackage[top=60pt,bottom=75pt]{geometry}
 \usepackage[noadvisor]{frontespizio}
 \usepackage{float}
 \usepackage{tabularx}
