--- a/relazione/sezioni/frontespizio.tex
+++ b/relazione/sezioni/frontespizio.tex
@@ -16,7 +16,7 @@
     \Preambolo{\makeatother}
 
     \Universita{Padova}
-    \Filigrana[height=3cm,before=2,after=7]{img/unipd}
+    \Filigrana[height=3cm,before=2,after=7]{immagini/unipd}
     \Dipartimento{Matematica ``Tullio Levi-Civita''}
     \Corso[Laurea]{Informatica}
     \Annoaccademico{2019--2020}
